--- a/src/Procfile
+++ b/src/Procfile
@@ -1,4 +1,1 @@
-web:
-  buildCommand: pip install -r requirements.txt
-  startCommand: python3 app.py
-  port: 5000
+web: gunicorn -b :$PORT src.app:app
