--- a/requirements.txt
+++ b/requirements.txt
@@ -54,6 +54,7 @@ fsspec==2023.9.0
 google-search-results==2.4.2
 googleapis-common-protos==1.60.0
 grpcio==1.58.0
+gunicorn==22.0.0
 h11==0.14.0
 httpcore==0.18.0
 httplib2==0.22.0
